--- a/notebooks/Data Exploration & Predictions.ipynb
+++ b/notebooks/Data Exploration & Predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,43 +15,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = pd.read_json(\"datasets/matches_parsed_2019_2020.json\")"
+    "ds = pd.read_json(\"datasets/matches_parsed_2019_2020_filter.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = ds[(ds[\"team1\"] == \"Natus Vincere\") | (ds[\"team2\"] == \"Natus Vincere\")]"
+    "# ds = ds[[\"team1\", \"team2\", \"map\", \"team1win\"]]\n",
+    "ds = ds[[\"team2\", \"map\", \"team1win\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds[(ds[\"team1\"] == \"ENCE\") | (ds[\"team2\"] == \"ENCE\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20330"
+       "229"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,11 +54,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team2</th>\n",
+       "      <th>map</th>\n",
+       "      <th>team1win</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>G2</td>\n",
+       "      <td>nuke</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>G2</td>\n",
+       "      <td>d2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>North</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North</td>\n",
+       "      <td>vtg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Heroic</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Heroic</td>\n",
+       "      <td>trn</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>G2</td>\n",
+       "      <td>vtg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>G2</td>\n",
+       "      <td>nuke</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FaZe</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FaZe</td>\n",
+       "      <td>d2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    team2   map  team1win\n",
+       "0      G2  nuke         0\n",
+       "1      G2    d2         0\n",
+       "2   North   inf         1\n",
+       "3   North   vtg         1\n",
+       "4  Heroic   inf         1\n",
+       "5  Heroic   trn         1\n",
+       "6      G2   vtg         1\n",
+       "7      G2  nuke         1\n",
+       "8    FaZe   inf         1\n",
+       "9    FaZe    d2         1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ds = ds[[\"oposite_team\", \"map\", \"pick\", \"mapWinRate\", \"victory\"]]\n",
+    "\n",
     "# ds = ds[[\"oposite_team\", \"map\", \"pick\", \"victory\"]]\n",
     "# ds = ds[[\"oposite_team\", \"map\",\"victory\"]]\n",
     "# ds = ds[[\"oposite_team\",\"victory\"]]"
@@ -74,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0, 1, 2])], remainder='passthrough')"
+    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0, 1])], remainder='passthrough')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is \u001b[1;31m46.8%\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "accuracies = cross_val_score(estimator=classifier, X=X_train, y=y_train, cv=5)\n",
     "print(\"Accuracy is \\x1b[1;31m{}%\\x1b[0m\".format(round(accuracies.mean().round(3) * 100,2)))"
@@ -150,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is \u001b[1;31m68.4%\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "accuracies = cross_val_score(estimator=classifier, X=X_train, y=y_train, cv=5)\n",
     "print(\"Accuracy is \\x1b[1;31m{}%\\x1b[0m\".format(round(accuracies.mean().round(3) * 100,2)))"
@@ -180,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,16 +316,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(n_estimators=25, random_state=0)"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=25, n_jobs=None,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,9 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is \u001b[1;31m64.3%\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "accuracies = cross_val_score(estimator=classifier, X=X_train, y=y_train, cv=5)\n",
     "print(\"Accuracy is \\x1b[1;31m{}%\\x1b[0m\".format(round(accuracies.mean().round(3) * 100,2)))"
@@ -237,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,18 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ENCE vs Natus Vincere // Map: trn // pick: ENCE\n",
-      "ENCE Ganha\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "map = 'trn'\n",
     "pick_team = 'ENCE'\n",
@@ -276,18 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ENCE vs Natus Vincere // Map: d2 // pick: Natus Vincere\n",
-      "Natus Vincere Ganha\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "map = 'd2'\n",
     "pick_team = 'Natus Vincere'\n",
@@ -305,20 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.36, 0.64]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "map = 'd2'\n",
     "pick_team = 'Natus Vincere'\n",
@@ -349,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X"
+    "y"
    ]
   },
   {
@@ -376,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
