--- a/notebooks/Data Exploration & Predictions.ipynb
+++ b/notebooks/Data Exploration & Predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = pd.read_json(\"datasets/matches_parsed_2019_2020_filter.json\")"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = pd.read_json(\"datasets/matches_parsed_2018_2020_astralis.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# team = \"Astralis\"\n",
+    "# ds = ds[(ds[\"team1\"] == team) | (ds[\"team2\"] == team) | (ds[\"team1\"] == team) | (ds[\"team2\"] == team)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "229"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +161,7 @@
        "9    FaZe    d2         1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,42 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# ds = ds[[\"oposite_team\", \"map\", \"pick\", \"victory\"]]\n",
-    "# ds = ds[[\"oposite_team\", \"map\",\"victory\"]]\n",
-    "# ds = ds[[\"oposite_team\",\"victory\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = ds.iloc[:, :-1].values\n",
-    "y = ds.iloc[:, -1].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0, 1])], remainder='passthrough')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "229"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "encoder = ct.fit(X)"
+    "len(ds)"
    ]
   },
   {
@@ -217,7 +196,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = encoder.transform(X).toarray()"
+    "X = ds.iloc[:, :-1].values\n",
+    "y = ds.iloc[:, -1].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encode Fatures"
    ]
   },
   {
@@ -226,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
+    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0, 1])], remainder='passthrough')"
    ]
   },
   {
@@ -235,12 +222,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB"
+    "encoder = ct.fit(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = encoder.transform(X).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 1., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encode Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = list()\n",
+    "for cl in le.classes_:\n",
+    "    res.append({\"name\": cl, \"label\": le.transform([cl])[0]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,14 +326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is \u001b[1;31m46.8%\u001b[0m\n"
+      "Accuracy is \u001b[1;31m45.6%\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\users\\thiago\\documents\\applications\\hltv-crawler\\notebooks\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_split.py:670: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n"
      ]
     }
    ],
@@ -269,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,14 +372,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is \u001b[1;31m68.4%\u001b[0m\n"
+      "Accuracy is \u001b[1;31m63.8%\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\users\\thiago\\documents\\applications\\hltv-crawler\\notebooks\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_split.py:670: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n"
      ]
     }
    ],
@@ -307,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,44 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=25, n_jobs=None,\n",
-       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier = RandomForestClassifier(n_estimators=25, criterion='gini', random_state=0)\n",
     "classifier.fit(X_train,y_train)\n",
-    "# y_pred = classifier.predict(X_test)"
+    "y_pred = classifier.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy is \u001b[1;31m64.3%\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracies = cross_val_score(estimator=classifier, X=X_train, y=y_train, cv=5)\n",
     "print(\"Accuracy is \\x1b[1;31m{}%\\x1b[0m\".format(round(accuracies.mean().round(3) * 100,2)))"
@@ -381,8 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team1 = 'ENCE'\n",
-    "team2 = 'Natus Vincere'"
+    "ds.team2.unique()"
    ]
   },
   {
@@ -391,18 +457,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map = 'trn'\n",
-    "pick_team = 'ENCE'\n",
+    "team1 = 'MIBR'\n",
+    "team2 = 'FURIA'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "map = 'mrg'\n",
+    "pick_team = 'FURIA'\n",
     "other_team = team2 if pick_team == team1 else team1\n",
     "\n",
     "print(f\"{team1} vs {team2} // Map: {map} // pick: {pick_team}\")\n",
+    "print(f\"{pick_team} vs {other_team}\")\n",
     "\n",
     "ds_test = [[pick_team, other_team, 'd2']]\n",
     "X_new = encoder.transform(ds_test).toarray()\n",
-    "y_pred = classifier.predict(X_new)\n",
+    "y_pred = classifier.predict_proba(X_new)\n",
     "\n",
-    "winner = pick_team if y_pred[0] == 0 else other_team\n",
-    "print(f'{winner} Ganha')"
+    "# winner = pick_team if y_pred[0] == 0 else other_team\n",
+    "# print(f'{winner} Ganha')\n",
+    "probabilities = list(zip(classifier.classes_, classifier.predict_proba(X_new)[0]))\n",
+    "probabilities_translate = list()\n",
+    "for prob in probabilities:\n",
+    "    team = [x[\"name\"] for x in res if x[\"label\"] == prob[0]][0]\n",
+    "    probabilities_translate.append({\"team\": team, \"win_probability\": prob[1]})\n",
+    "prob_df = pd.DataFrame(probabilities_translate).sort_values(\"win_probability\", ascending=False)\n",
+    "prob_df[0:2]"
    ]
   },
   {
@@ -411,56 +497,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map = 'd2'\n",
-    "pick_team = 'Natus Vincere'\n",
-    "other_team = team2 if pick_team == team1 else team1\n",
+    "probabilities_translate = list()\n",
+    "for prob in probabilities:\n",
+    "    team = [x[\"name\"] for x in res if x[\"label\"] == prob[0]][0]\n",
+    "    probabilities_translate.append({\"team\": team, \"win_probability\": prob[1]})\n",
+    "prob_df = pd.DataFrame(probabilities_translate).sort_values(\"win_probability\", ascending=False)\n",
+    "prob_df[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team2 = \"NiP\"\n",
+    "game_map = \"d2\"\n",
     "\n",
-    "print(f\"{team1} vs {team2} // Map: {map} // pick: {pick_team}\")\n",
-    "\n",
-    "ds_test = [[pick_team, other_team, 'd2']]\n",
+    "ds_test = [[team2, game_map]]\n",
     "X_new = encoder.transform(ds_test).toarray()\n",
     "y_pred = classifier.predict(X_new)\n",
     "\n",
-    "winner = pick_team if y_pred[0] == 0 else other_team\n",
-    "print(f'{winner} Ganha')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "map = 'd2'\n",
-    "pick_team = 'Natus Vincere'\n",
-    "other_team = team2 if pick_team == team1 else team1\n",
-    "\n",
-    "print(f\"{team1} vs {team2} // Map: {map} // pick: {pick_team}\")\n",
-    "\n",
-    "ds_test = [[pick_team, other_team, 'd2']]\n",
-    "X_new = encoder.transform(ds_test).toarray()\n",
-    "y_pred = classifier.predict(X_new)\n",
-    "\n",
-    "winner = pick_team if y_pred[0] == 0 else other_team\n",
-    "print(f'{winner} Ganha')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
+    "win = True if y_pred[0] == 1 else False\n",
+    "print(\"Victory\" if win else \"Loose\")"
    ]
   },
   {
@@ -487,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
